Add host-only API delete endpoints
